version/0.1/_sources/examples/basic_examples/index.rst.txt


.. _sphx_glr_examples_basic_examples:

Basic examples
--------------


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simple particle simulation">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_minimal_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_minimal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple particle simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Particle simulation with wall interaction">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_particle_wall_interaction_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_particle_wall_interaction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle simulation with wall interaction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Particle simulation with moving wall interaction">

.. only:: html

  .. image:: /examples/basic_examples/images/thumb/sphx_glr_particle_wall_interaction_with_motion_thumb.png
    :alt:

  :ref:`sphx_glr_examples_basic_examples_particle_wall_interaction_with_motion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Particle simulation with moving wall interaction</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/basic_examples/minimal
   /examples/basic_examples/particle_wall_interaction
   /examples/basic_examples/particle_wall_interaction_with_motion

